--- a/app/src/main/res/layout/fragment_page4.xml
+++ b/app/src/main/res/layout/fragment_page4.xml
@@ -3,39 +3,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/page1"
-    tools:context=".fragment.Page4" >
+    tools:context=".fragment.Page4">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
 
     <Button
         android:id="@+id/button9"
         android:layout_width="140dp"
         android:layout_height="75dp"
-        android:layout_gravity="clip_horizontal|center"
+
+        android:layout_gravity="bottom|center"
         android:layout_marginBottom="100dp"
         android:background="@drawable/go"
-        android:text="Button"
+        android:onClick="ChangeInfo"
+        android:text="修改個人資料"
         android:textSize="22sp"
-        tools:text="修改個人資料" />
+        tools:layout_gravity="center" />
 
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="140dp"
-        android:layout_height="70dp"
-        android:layout_gravity="bottom|clip_horizontal|center"
-        android:layout_marginBottom="230dp"
-        android:background="@drawable/go"
-        android:text="Button"
-        android:textSize="22sp"
-        tools:text="登出" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
 
     <Button
         android:id="@+id/button11"
         android:layout_width="140dp"
         android:layout_height="70dp"
-        android:layout_gravity="clip_horizontal|center|center_horizontal"
+
+
         android:layout_marginBottom="0dp"
         android:background="@drawable/go"
-        android:text="Button"
-        android:textSize="22sp"
-        tools:text="版本資訊" />
+        android:text="版本資訊"
+        android:textSize="22sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
+        android:orientation="horizontal"></LinearLayout>
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="140dp"
+        android:layout_height="70dp"
+
+        android:background="@drawable/go"
+        android:onClick="logout"
+        android:text="登出"
+        android:textSize="22sp" />
+
 </FrameLayout>
