--- a/app/src/main/res/layout/activity_add_goods.xml
+++ b/app/src/main/res/layout/activity_add_goods.xml
@@ -18,7 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
             <TextView
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/upload_image">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/good_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -71,7 +71,7 @@
                 app:layout_constraintTop_toBottomOf="@id/panel1">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editText11"
+                    android:id="@+id/good_distribution"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -89,12 +89,30 @@
                 app:layout_constraintTop_toBottomOf="@id/panel2">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editText12"
+                    android:id="@+id/last_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:ems="10"
                     android:hint="剩餘時間"
+                    android:inputType="textPersonName" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/panel4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/panel3">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:ems="10"
+                    android:hint="地址"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,10 +123,10 @@
                 android:text="是否有費用"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/panel3" />
+                app:layout_constraintTop_toBottomOf="@id/panel4" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/panel4"
+                android:id="@+id/panel5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +134,7 @@
                 app:layout_constraintTop_toBottomOf="@id/chip2">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editText13"
+                    android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -135,7 +153,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/panel4" />
+                app:layout_constraintTop_toBottomOf="@id/panel5"
+                android:onClick="submit_goods"/>
 
             <Button
                 android:id="@+id/cancel"
@@ -145,7 +164,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/panel4" />
+                app:layout_constraintTop_toBottomOf="@id/panel5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
