新增chatroom message 時間 Messageadapter.java新增get messagetime

--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -16,6 +16,7 @@
             android:id="@+id/profile_image"
             android:visibility="gone"
             />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,6 +27,15 @@
             android:textSize="18sp"
             android:textColor="#fff"
             android:padding="8dp"/>
+
+        <TextView
+            android:id="@+id/chatroomtimetxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/show_message"
+            android:layout_marginEnd="1dp"
+            android:layout_toStartOf="@+id/show_message"
+            android:text="" />
 
 
     </RelativeLayout>
