--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -20,4 +20,14 @@
         android:padding="8dp"
         android:background="@drawable/background_left"/>
 
+    <TextView
+        android:id="@+id/chatroomtimetxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/profile_image"
+        android:layout_marginEnd="1dp"
+        android:layout_toRightOf="@id/show_message"
+        android:text="TextView" />
+
+
 </RelativeLayout>
