--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -16,6 +16,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
+            android:id="@+id/appbar_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
