註冊帳號(含店家)

--- a/app/src/main/res/layout/activity_registered_page.xml
+++ b/app/src/main/res/layout/activity_registered_page.xml
@@ -6,118 +6,107 @@
     android:layout_height="match_parent"
     tools:context=".registered_page"
     android:background="@drawable/page1">
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="350dp"
+                android:layout_height="?actionBarSize"
+                android:layout_gravity="center"
+                android:layout_marginStart="31dp"
+                android:layout_marginEnd="30dp"
+                android:gravity="center"
+                android:text="註冊帳號"
+                android:textColor="#F8CBAD"
+                android:textSize="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.15" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="350dp"
-        android:layout_height="?actionBarSize"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="註冊帳號"
-        android:textColor="#F8CBAD"
-        android:textSize="24dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.25">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="350dp"
-        android:layout_height="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7">
-
-        <LinearLayout
-            android:id="@+id/L1"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/rName"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/L2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L1">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nickname"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/L1">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText4"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/L3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L2">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/mailForLog"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/L2">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText5"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                     android:ems="10"
                     android:inputType="textEmailAddress"
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/L4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L3">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pwd"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/L3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText7"
@@ -128,21 +117,17 @@
                     android:inputType="textPassword"
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/L5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L4">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/tel"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/L7">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText8"
@@ -153,21 +138,14 @@
                     android:inputType="phone"
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/L6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L5">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/rAdd"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintTop_toBottomOf="@+id/L5">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText9"
@@ -178,43 +156,35 @@
                     android:inputType="textPostalAddress"
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:background="@drawable/go"
-            android:onClick="go"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L6" />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:background="@drawable/go"
+                android:onClick="go"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/L6" />
 
-        <CheckBox
-            android:id="@+id/checkBox2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/newShopInfo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L6" />
+            <CheckBox
+                android:id="@+id/checkBox2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/newShopInfo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/L6" />
 
-        <LinearLayout
-            android:id="@+id/L7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="168dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/L6">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/L7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="確認密碼"
-                android:textColorHint="#C55A11">
+                android:textColorHint="#C55A11"
+                app:layout_constraintTop_toBottomOf="@+id/L4">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText10"
@@ -223,11 +193,9 @@
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textPassword"
-                    android:text=""
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="350dp" />
+                    android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
